# tik

./: .gitignore  LICENSE  README.md
backend/: README.md  main.py  pyproject.toml  tik.db
backend/alembic/versions/: 293110691a06_added_integer_type_in_id_flied.py
backend/src/: exceptions.py  middlewares.py  utils.py
backend/src/backend/: config.py
backend/src/handlers/: __init__.py  _orm.py  _validatation.py  database.py  utils.py
backend/src/models/: __init__.py  _base.py  _category.py  _comment.py  _level.py  _project.py  _status.py  _ticket.py  _user.py
backend/src/routers/: category.py  comment.py  home.py  level.py  pagination.py  project.py  register.py  status.py  ticket.py  user.py  utils.py
backend/src/schemas/: __init__.py  _category.py  _comment.py  _level.py  _project.py  _status.py  _ticket.py  _user.py
backend/tests/: conftest.py  test.db
backend/tests/src/routers/: test_category.py  test_comment.py  test_level.py  test_project.py  test_status.py  test_ticket.py  test_user.py
