[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Ali YARO",email = "aliyaro104@gmail.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "typeguard (>=4.4.1,<5.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "fastapi[all] (>=0.115.8,<0.116.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "bcrypt (>=4.2.1,<5.0.0)",
    "fastapi-pagination (>=0.12.34,<0.13.0)",
    "faker (>=35.2.0,<36.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "python-jose (>=3.3.0,<4.0.0)",
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pytest-dependency = "^0.6.0"
mypy = "^1.14.1"
ruff = "^0.9.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
